# hh_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml
app/: pyproject.toml
app/api_hh/: entities.py  hh_client.py  response.py
app/core/: config.py  logger.py
app/keyboards/: backbtn.py  menu.py  position.py  source_work.py  vacancies.py
app/routers/: __init__.py  cmds.py  handledialog.py  messages.py  surveybase.py  surveylead.py  utils.py  waiting_resume.py
app/routers/callbacks/: back.py  buyer.py  other_vacancies.py  position.py  survey.py
app/states/: survey.py  upload_resume.py
