[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Aleksey <rav.92@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.17.0"
environs = "^14.1.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.2.3"
black = "^24.10.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',

]
max-line-length = 120
count = true
exclude = [
    # No need to traverse our git directory
    ".git",
    # There's no value in checking cache directories
    "__pycache__",
    ".venv/"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
